Freedom Sanbox Ant Deploy/src/objects/Goal__c.object
<CustomObject>
    <fields>
        <fullName>Accumulated_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Accumulated Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Debt__c</fullName>
        <label>Allocated Debt</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocated_Equity__c</fullName>
        <label>Allocated Equity</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocated_Gold__c</fullName>
        <label>Allocated Gold</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocated_Others__c</fullName>
        <label>Allocated Others</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocated_Real_Estate__c</fullName>
        <label>Allocated Real_Estate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocation_Message__c</fullName>
        <description>To display allocation asset details for particular on Goal calculation page</description>
        <label>Allocation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Expenses__c</fullName>
        <label>Annual Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_Goal_Annual__c</fullName>
        <label>Cost of Goal (Annual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_End_Year__c</fullName>
        <label>Goal End Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Frequency__c</fullName>
        <label>Goal Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Start_Year__c</fullName>
        <label>Goal Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marriage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parental Responsibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money to Heirs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IRR__c</fullName>
        <label>IRR</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Include_SIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FP Changes II - According to check box SIP table should get rendered</description>
        <label>Include SIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inflation_Rate__c</fullName>
        <label>Inflation Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsDisplayDefaultProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDisplayDefaultProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDisplayLumpsuminAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDisplayLumpsuminAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDisplaySIPinAP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsDisplaySIPinAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Include_In_HLV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Instead of picking goals for calculation of HLV based on priority, this tickbox is provided</description>
        <label>Include In HLV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Date_Reviewed__c</fullName>
        <label>Last Date Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalGoalPV__c</fullName>
        <label>OriginalGoalPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Achieved__c</fullName>
        <label>Percent Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ranking_Priority__c</fullName>
        <label>Ranking Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence__c</fullName>
        <label>Recurrence</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <description>Space for ‘Remarks’ where the FP can give additional advice(Only for Goal)</description>
        <inlineHelpText>Space for ‘Remarks’ where the FP can give additional advice</inlineHelpText>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RemoveCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RemoveCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retirement_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retirement Amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RichText_Remark__c</fullName>
        <label>RichText Remark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Profile__c</fullName>
        <label>Risk Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIP_Start_Year__c</fullName>
        <label>Investment Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saving_type__c</fullName>
        <label>Saving type</label>
        <picklist>
            <picklistValues>
                <fullName>Constant annuity - Progressive Risk Profile</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Growing annuity - Progressive Risk Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constant Annuity - Constant Risk Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growing Annuity - Constant Risk Profile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SelectedGoalProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal Profile</label>
        <referenceTo>Goal_Profile__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>aggressive_profile_years__c</fullName>
        <label>aggressive profile years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>conservative_profile_years__c</fullName>
        <label>conservative profile years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>moderate_profile_years__c</fullName>
        <label>moderate_profile_years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>moderately_aggressive_profile_years__c</fullName>
        <label>moderately aggressive profile years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>moderately_conservative_profile_years__c</fullName>
        <label>moderately conservative profile years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Goal</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>